# Helium

./: .build  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTORS.md  Default.sublime-commands  Default.sublime-keymap  Helium.sublime-settings  Helium.sublime-syntax  Hermes - Excecute Block.sublime-build  Hermes - Excecute Cell.sublime-build  Hermes.sublime-build  Hermes.sublime-settings  LICENSE.TXT  Main.sublime-menu  README.md  __init__.py  codecov.yml  dependencies.json  helium.py  hermes.py  kernel.py  messages.json  pyproject.toml  utils.py
.github/workflows/: ci.yml  main.yml  test.yml  tests.yml
lib/: PyDbLite.py  kernel.py  resource.py  utils.py
lib/client/: update_decorator.sh  update_ipython_genutils.sh  update_jupyter_client.sh  update_jupyter_core.sh  update_traitlets.sh
lib/client/jupyter_client/: manager.py
lib/client/jupyter_core/: application.py  paths.py  version.py
lib/client/traitlets/config/: loader.py
lib/jupyter_client/: session.py
lib/jupyter_client/ioloop/: manager.py  restarter.py
lib/jupyter_interaction/: kernel.py
messages/: 0.3.1.txt  0.3.2.txt  0.3.3.txt  0.3.4.txt  0.3.5.txt  0.3.6.txt  0.4.0.txt  0.4.1.txt  0.4.2.txt  0.4.3.txt  0.5.0.txt  0.5.1.txt  0.5.4.txt  0.6.0.txt  0.6.1.txt  0.6.2.txt  0.6.3.txt  0.6.4.txt
tests/: _helpers.py  test_cell_handling.py  test_tests_running.py
