[tool.poetry]
name = "Helium"
version = "0.6.0"
description = "Let Sublime Text 3 talk with Jupyter."
authors = ["Ben Felder <ben@felder.io>"]

[tool.poetry.dependencies]
python = "3.8"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7.9"
flake8-blind-except = "^0.1.1"
flake8-comprehensions = "^3.2.2"
flake8-docstrings = "^1.5.0"
isort = "^4.3.21"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
