[tool.poetry]
name = "Helium"
version = "0.6.0"
description = "Let Sublime Text 3 talk with Jupyter."
authors = ["Ben Felder <ben@felder.io>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8-eradicate = "^0.2.4"
pre-commit = "^2.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7.9"
flake8-blind-except = "^0.1.1"
flake8-comprehensions = "^3.2.2"
flake8-docstrings = "^1.5.0"
isort = "^4.3.21"
mypy = "^0.761"

[tool.isort]
line_length = 88
combine_star = true
known_third_party = []

[tool.black]
line-length = 88
target_version = ["py38"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[flake8]
ignore = ",E203,D100,D101,D102,D103,D104,D105,D106,D107,D203,W503,"
exclude = ",.git, .venv, lib/client,"
max-line-length = 88
